erDiagram
    USERS ||--|| USER_PROFILES : "có"
    USERS ||--o{ SHIPPING_ADDRESSES : "quản lý"
    USERS }o--o{ ROLES : "được gán"
    ROLES }o--o{ PERMISSIONS : "bao gồm"

    CATEGORIES ||--o{ PRODUCTS : "phân loại"
    PRODUCTS ||--o{ PRODUCT_IMAGES : "có"
    PRODUCTS ||--o{ DEVICES : "gồm"

    USERS ||--o{ ORDERS : "đặt mua"
    ORDERS ||--|{ ORDER_ITEMS : "gồm"
    PRODUCTS ||--o{ ORDER_ITEMS : "được mua"

    USERS ||--o{ RENTAL_ORDERS : "đặt thuê"
    RENTAL_ORDERS ||--|{ RENTAL_ORDER_ITEMS : "gồm"
    PRODUCTS ||--o{ RENTAL_ORDER_ITEMS : "được thuê"
    DEVICES o|--o{ RENTAL_ORDER_ITEMS : "được gán"
    RENTAL_ORDERS ||--o| RENTAL_CONTRACTS : "có"
    RENTAL_ORDERS ||--o| RENTAL_HANDOVER_REPORTS : "có"
    RENTAL_ORDERS ||--o| RENTAL_RETURN_REPORTS : "có"
    RENTAL_ORDERS ||--o{ RENTAL_PAYMENTS : "phát sinh"

    USERS ||--o{ VERIFICATION_SESSIONS : "thực hiện"
    USERS ||--o| USER_IDENTITIES : "có"
    VERIFICATION_SESSIONS ||--o{ VERIFICATION_ARTIFACTS : "chứa"
    VERIFICATION_SESSIONS ||--o| VERIFICATION_RESULTS : "có"
    VERIFICATION_SESSIONS ||--o| FACE_VERIFICATION_RESULTS : "có"
    VERIFICATION_SESSIONS ||--o| RISK_ASSESSMENTS : "có"
    VERIFICATION_SESSIONS ||--o{ VERIFICATION_REVIEWS : "được duyệt"